force-app/main/default/objects/slackv2__Recent_Channel__c/slackv2__Recent_Channel__c.object-meta.xml
<CustomObject>
    <label>Recent Channel</label>
    <nameField>
        <label>Recent Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recent Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>