force-app/main/default/objects/slackv2__Recent_Channel__c/fields/slackv2__Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Channel_Id__c</fullName>
    <label>Channel Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>