force-app/main/default/objects/slackv2__Recent_Channel__c/fields/slackv2__Slack_Auth__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Slack_Auth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Slack Auth</label>
    <referenceTo>slackv2__Slack_Auth__c</referenceTo>
    <relationshipName>Recent_Channels</relationshipName>
    <type>Lookup</type>
</CustomField>