force-app/main/default/objects/slackv2__Recent_Channel__c/fields/slackv2__Type__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>